[package]
name = "abhyas"
version = "1.2.0"
edition = "2021"
authors = ["Harshal Jadhav <bestt1315@gmail.com>"]
homepage = "https://github.com/halshar/abhyas"
description = "Abhyas is a Rust command-line application for managing and interacting with a database of links."
readme = "README.md"
repository = "https://github.com/halshar/abhyas" 
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
inquire = "0.6.2"
termcolor = "1.4.0"
tabled = "0.14.0"
